--- a/Jedis-Parent/jedis-api/src/main/resources/config/application-dev.yml
+++ b/Jedis-Parent/jedis-api/src/main/resources/config/application-dev.yml
@@ -5,6 +5,10 @@ db:
 server:
   port: 80
 spring:
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    password:
   datasource:
     database1:
       driver-class-name: com.mysql.cj.jdbc.Driver
@@ -25,14 +29,6 @@ spring:
     timeBetweenEvictionRunsMillis: 3000
     minEvictableIdleTimeMillis: 300000
 
-redis:
-  port: 6379
-  ip: 101.200.87.141
-  password:
-  maxTotal: 10000
-  maxIdle: 1000
-  maxWaitMillis: 100000
-  testOnBorrow: false
 thunisoft:
   hyyd:
     basic:
