--- a/Jedis-Parent/feign/pom.xml
+++ b/Jedis-Parent/feign/pom.xml
@@ -11,7 +11,11 @@
     <artifactId>feign</artifactId>
 
     <dependencies>
-
+        <dependency>
+            <groupId>io.github.admin4j</groupId>
+            <artifactId>http</artifactId>
+            <version>0.4.0</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
